[gd_scene load_steps=8 format=3 uid="uid://dqrvjq6rhl2xn"]

[ext_resource type="Script" path="res://Menus/Scripts/game_over_menu.gd" id="1_x1fdu"]
[ext_resource type="Theme" uid="uid://dpy8lokjdhd4m" path="res://Menus/Assets/menuTheme.tres" id="1_yn4k4"]
[ext_resource type="FontFile" uid="uid://n7lo661wrh6j" path="res://Menus/Assets/PixCon.ttf" id="2_b4154"]
[ext_resource type="Texture2D" uid="uid://duosag1gr12na" path="res://Menus/Assets/result_fail.png" id="2_psyd3"]
[ext_resource type="Theme" uid="uid://ctl7ud287nf8v" path="res://Menus/Assets/new_theme_2.tres" id="5_nlf2j"]
[ext_resource type="AudioStream" uid="uid://bh84supdxbkih" path="res://Menus/Assets/audio/Victory.wav" id="6_80jk6"]
[ext_resource type="AudioStream" uid="uid://ux8i2wqiw8hs" path="res://Menus/Assets/audio/defeat.ogg" id="7_2oeoa"]

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x1fdu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.466667, 0.466667, 0.466667, 1)

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_psyd3")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_yn4k4")
theme_override_colors/font_color = Color(0, 0.411765, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_b4154")
theme_override_font_sizes/font_size = 100
text = "FAILURE"
horizontal_alignment = 1

[node name="InfoCon" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_yn4k4")
theme_override_constants/separation = 70

[node name="AttemptsLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoCon"]
layout_mode = 2
text = "Attempts: 1"

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoCon"]
layout_mode = 2
text = "Time Taken: 0:40"

[node name="ShotsLabel" type="Label" parent="MarginContainer/VBoxContainer/InfoCon"]
layout_mode = 2
text = "Shots Fired: 5"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 325

[node name="ButtonsCon" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("5_nlf2j")
theme_override_constants/separation = 175

[node name="RetryButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/ButtonsCon"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme = ExtResource("5_nlf2j")
theme_override_font_sizes/font_size = 25
text = "Try Again"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/ButtonsCon"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Menu"

[node name="NextButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/ButtonsCon"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme = ExtResource("5_nlf2j")
theme_override_font_sizes/font_size = 25
disabled = true
text = "Next Level"

[node name="VictoryMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_80jk6")
bus = &"Music"

[node name="DefeatMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_2oeoa")
bus = &"Music"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/ButtonsCon/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/ButtonsCon/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/ButtonsCon/NextButton" to="." method="_on_next_button_pressed"]
